[project]
name = "buntzen-pass-bot"
version = "0.1.0"
description = "Unattended Playwright bot for Buntzen Lake Yodel pass booking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "twilio>=9.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
